Col: fix bug of grids don not wrap in flex layout

--- a/packages/theme-chalk/src/row.scss
+++ b/packages/theme-chalk/src/row.scss
@@ -9,6 +9,7 @@
 
   @include m(flex) {
     display: flex;
+    flex-wrap: wrap;
     &:before,
     &:after {
       display: none;
